fixed asteroid diagram misalignment

--- a/space-invader-frontend/src/App.css
+++ b/space-invader-frontend/src/App.css
@@ -22,9 +22,6 @@ body {
 
 
 
-img.ui.image.asteroid-image{
-margin: -2%
-}
 
 
 
